change atach screen logic
